--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <img src="https://www.mcdonalds.co.kr/kor/images/common/logo.png" alt="맥도날드 로고">
                     </div>
                     <div class="menu-grid">
-                        <h2>Menu <br> Title</h2>
+                        <h2>오늘의<br>추천메뉴</h2>
                         <div class="grid">
                             <div class="grid-item">
                                 <img class="menu-img" src="https://www.mcdonalds.co.kr/upload/product/pcfile/1717486375819.png" alt="메뉴 이미지">
@@ -52,7 +52,7 @@
                         <div class="total">
                             <h2>Total</h2>
                             <p class="total-price">0원</p>
-                            <button class="pay-btn">Done</button>
+                            <button class="pay-btn">결제</button>
                         </div>
                     </div>
                 </div>
